﻿Legend:
! Breaking change
* Compatible change
- Bugfix
+ New feature
===============================================================================

~~~~~~~~~
* v8.1.0:
~~~~~~~~~

* KGySoft.Drawing.Imaging namespace
===================================
* OptimizedPaletteQuantizer class:
  * MedianCut method: Improved memory usage and performance. Supports parallel processing.
- Palette class:
  - GetNearestColor and GetNearestColorIndex methods:
    - AlphaThreshold was not considered for partially transparent colors with an exact match in the palette.
    - The result was not always correct if the palette contained partially transparent colors.


~~~~~~~~~
! v8.0.0:
~~~~~~~~~

+ Assembly changes:
===================
+ Targeting also .NET 8.0

! KGySoft.Drawing.Imaging namespace
===================================
! BitmapDataFactory class:
  ! The old CreateBitmapData overloads for custom pixel formats (the ones that have PixelFormatInfo parameter) no
    longer assume that the delegates can work independently with any back buffer. To assume this use the new
    overloads with Custom[Indexed]BitmapDataConfig parameters and set the BackBufferIndependentPixelAccess property.
  + New CreateBitmapData overloads with Custom[Indexed]BitmapDataConfig parameters for custom pixel format with
    delegates for also other color types than Color32. You can use these for wide custom pixel formats.
! BitmapDataExtensions class:
  ! GetColorCount/BeginGetColorCount/ColorCountAsync methods: For custom pixel formats or when the raw data was not
    accessible the counting quantized the possibly wide colors to 32 bit. From now on the real number of colors are
    returned even for such cases. Though it counts as a breaking change, this is actually an improvement.
  ! Clone/BeginClone/CloneAsync methods: When the target pixel format was a different wide format than that of the